add logo to header and apply oswald font

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,10 @@ header {
     background-color: red;
 }
 
+h1 {
+    font-family: oswald, sans-serif;
+}
+
 main {
     background-color: green;
     flex: 1 0 auto;
