--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,12 +10,17 @@ body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    color: #ffffff;
+    color: #3a3a3a;
     font-family: lato, sans-serif;
 }
 
 header {
-    background-color: red;
+    background-color: rgb(255, 255, 255);
+    padding: 0 1rem;
+    position: fixed;
+    z-index: 99;
+    width: 100%;
+    box-shadow: 0 2px 2px #3a3a3a;
 }
 
 h1 {
