--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,7 +82,7 @@ main {
 }
 
 footer {
-    background-color: blue;
+    background-color: rgb(147, 147, 255);
 }
 
 @media screen and (min-width: 768px) {
