--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,8 +81,18 @@ main {
     margin-top: 47px;
 }
 
-footer {
-    background-color: rgb(147, 147, 255);
+#social-networks {
+    text-align: center;
+    padding: 20px;
+    display: flex;
+    justify-content: space-evenly;
+    list-style-type: none;
+}
+
+#social-networks i {
+    font-size: 160%;
+    padding: 5%;
+    color: #3a3a3a;
 }
 
 @media screen and (min-width: 768px) {
