--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,9 +76,14 @@ nav {
 }
 
 main {
-    background-color: green;
     flex: 1 0 auto;
     margin-top: 47px;
+}
+
+#hero {
+    height: 600px;
+    width: 100%;
+    background: url("../images/hero-image.webp") no-repeat center center/cover;
 }
 
 #social-networks {
