--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,13 @@ body {
     font-family: lato, sans-serif;
 }
 
+h1, h2, h3 {
+    font-family: oswald, sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: #252525;
+}
+
 header {
     background-color: rgb(255, 255, 255);
     padding: 0 1rem;
@@ -29,13 +36,6 @@ header {
 header a {
     text-decoration: none;
     color: inherit;
-}
-
-h1 {
-    font-family: oswald, sans-serif;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    color: #252525;
 }
 
 #menu {
@@ -84,6 +84,22 @@ main {
     height: 600px;
     width: 100%;
     background: url("../images/hero-image.webp") no-repeat center center/cover;
+    position: relative;
+}
+
+#cover-text {
+    background-color: rgb(241, 109, 107, .7);
+    font-size: 130%;
+    position: absolute;
+    bottom: 30px;
+    width: 80%;
+    min-height: 200px;
+    padding-top: 40px;
+    padding-left: 10px;
+}
+
+#cover-text > h2, #cover-text > h3 {
+    color: #ffffff;
 }
 
 #social-networks {
@@ -129,6 +145,11 @@ main {
 
     main {
         margin-top: 79px;
+    }
+
+    #cover-text {
+        width: 300px;
+        right: 50px;
     }
 }
 
