--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
 * {
     padding: 0;
     margin: 0;
-    box-sizing: border-box;    
+    box-sizing: border-box;
 }
 
 body {
@@ -11,7 +11,7 @@ body {
     display: flex;
     flex-direction: column;
     color: #3a3a3a;
-    font-family: lato, sans-serif;
+    font-family: 'lato', sans-serif;
 }
 
 h1, h2, h3 {
@@ -44,7 +44,7 @@ header a {
     list-style-type: none;
 }
 
-#menu li {
+#menu > li {
     margin-bottom: 1em;
 }
 
@@ -88,7 +88,7 @@ main {
 }
 
 #cover-text {
-    background-color: rgb(241, 109, 107, .7);
+    background-color: rgba(241, 109, 107, .7);
     font-size: 130%;
     position: absolute;
     bottom: 30px;
@@ -102,9 +102,38 @@ main {
     color: #ffffff;
 }
 
+#reasons {
+    width: 90%;
+    margin: 20px auto;
+}
+
+#reasons h2 {
+    margin-bottom: 20px;
+    text-align: center;
+    font-size: 280%;
+}
+
+#benefits-physical > div,
+
+#benefits-mental > div {
+    line-height: 20px;
+    margin-bottom: 20px;
+}
+
+#benefits p {
+    padding: 0 20px;
+}
+
+#benefits hr {
+    border-top: 1px solid #3a3a3a;
+    margin: 5px 0;
+}
+
+/* ---FOOTER--- */
+
 #social-networks {
     text-align: center;
-    padding: 20px;
+    padding: 20px 0;
     display: flex;
     justify-content: space-evenly;
     list-style-type: none;
