--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,8 +129,23 @@ main {
     margin: 5px 0;
 }
 
-/* ---FOOTER--- */
+section #circle-cover-bg {
+    background: url('../images/reasons-image.webp') no-repeat top center / cover;
+    height: 90vw;
+    width: 90vw;
+    margin-bottom: 20px;
+    border-radius: 50%;
+    max-width: 300px;
+    max-height: 300px;
+}
 
+#benefits-image {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+/* ---------------FOOTER-------------- */
 #social-networks {
     text-align: center;
     padding: 20px 0;
