--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -194,6 +194,14 @@ section #circle-cover-bg {
     color: #3a3a3a;
 }
 
+@media screen and (min-width: 576px) {
+    #photos {
+        column-count: 2;
+        column-gap: 0;
+    }
+}
+    
+
 @media screen and (min-width: 768px) {
     nav {
         display: block;
@@ -246,11 +254,19 @@ section #circle-cover-bg {
         text-align: end;
         align-self: flex-end;
     }
+
+    #photos {
+        column-count: 3;
+    }
 }
 
 @media screen and (min-width: 992px) {
     #menu a:hover {
         border-bottom: 1px solid #3a3a3a;
+    }
+
+    #photos {
+        column-count: 4;
     }
 }
 
